Set up a basic grid system.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<div id="container">
-<app-header></app-header>
-
-  <div id="content">
-    <router-outlet></router-outlet>
-  </div>
+<div id="app-container">
+  <app-header></app-header>
+  <app-banner></app-banner>
+  <app-content></app-content>
+  <app-footer></app-footer>
 </div>
