--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
-<app-id-card></app-id-card>
-<app-navigation></app-navigation>
-<app-social-media></app-social-media>
+<header>
+  <app-id-card></app-id-card>
+  <app-navigation></app-navigation>
+  <app-social-media></app-social-media>
+</header>
