--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  padding: 20px;
   height: 100vh;
   width: 100vw;
-  background-color: white;
+  background-color: #f3f3f3;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
+}
+
+div#app-container {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 140px 360px auto 100px;
+  grid-template-areas: "header" "banner" "content" "footer";
+  background-color: maroon;
 }
