Updated the grid layout. Moving away from one huge stylesheet that requires id tags for containers in each component. Major improvement in the header area.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
 <div id="app-container">
-  <app-header></app-header>
-  <app-banner></app-banner>
-  <app-content></app-content>
-  <app-footer></app-footer>
+  <header>
+    <app-id-card></app-id-card>
+    <nav>
+      <app-navigation></app-navigation>
+    </nav>
+    <app-social-media></app-social-media>
+  </header>
+  <main>
+    <app-banner></app-banner>
+    <app-content></app-content>
+  </main>
+  <footer>
+    <app-social-media></app-social-media>
+    <app-copyright></app-copyright>
+    <app-back-to-top></app-back-to-top>
+  </footer>
 </div>
