--- a/src/app/social-media/social-media.component.html
+++ b/src/app/social-media/social-media.component.html
@@ -1,4 +1,2 @@
-<div id="social-media-container">
-  <img id="git" src="../../assets/1x/github%20icon%20graymdpi.png" alt="link to github account">
-  <img id="linkedin" src="../../assets/1x/linkedin%20icon%20graymdpi.png" alt="link to linkedin account">
-</div>
+  <img id="git" src="../../assets/SVG/github%20icon%20gray.svg" alt="link to github account">
+  <img id="linkedin" src="../../assets/SVG/linkedin%20icon%20gray.svg" alt="link to linkedin account">
