--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,4 @@
+<nav>
   <a href="#" class="active">Home</a>
   <p>/</p>
   <a href="#">Portfolio</a>
@@ -5,3 +6,4 @@
   <a href="#">Contact</a>
   <p>/</p>
   <a href="#">About</a>
+</nav>
