--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,24 +1,48 @@
-:host > * {
-  margin-top: 30px;
-}
+:host {
+  grid-area: navigation;
 
-p {
-  display: inline-block;
-  margin: 0 25px;
-  color: #CCCCCC;
-  font-size: 18px;
-}
+  nav {
+    //margin-top: 30px;
+    text-align: center;
 
-a {
-  color: #606060;
-  font-size: 18px;
-  font-weight: 500;
-  text-decoration: none;
+    p {
+      display: inline-block;
+      margin: 0 25px;
+      color: #CCCCCC;
+      font-size: 18px;
+    }
 
-  &.active {
-    font-weight: 700;
-    font-style: italic;
-    color: #313131;
+    a {
+      color: #606060;
+      font-size: 18px;
+      font-weight: 400;
+      text-decoration: none;
+
+      &.active {
+        font-weight: 700;
+        font-style: italic;
+        color: #313131;
+      }
+    }
+
+    @media (max-width: 650px) {
+      text-align: right;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      //margin: 0;
+      height: 120px;
+      p {
+        display: none;
+      }
+      a {
+        display: block;
+
+        @media (max-width: 370px) {
+          font-size: 16px;
+        }
+      }
+    }
   }
 }
 
