--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,12 +16,28 @@ div#app-container {
   //background-color: maroon;
 
   header {
+    position: relative;
     max-width: 1280px;
     width: 100%;
     margin: auto;
     display: grid;
-    grid-template-columns: 185px 1fr 185px;
+    grid-template-columns: 20px 185px 1fr auto 20px;
+    grid-template-areas: ". id-card navigation social-media .";
+    align-items: center;
+
+    @media (max-width: 760px) {
+      grid-template-columns: 20px 185px 1fr 20px;
+      grid-template-areas: ". id-card navigation .";
+    }
+
+
+
+
+
   }
+
+
+
 
   main {
     display: grid;
@@ -33,7 +49,4 @@ div#app-container {
     grid-template-columns: auto auto auto;
   }
 
-  nav {
-    text-align: center;
-  }
 }
