Added a responsive layout to the Banner section (within Main).
Moved stylings in Styles to the App-Component and turned the Styles file into a variables file. This will allow me to import reusable variables for colors and breakpoints.

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,1 +1,11 @@
-
+<div class="blue-bar"></div>
+<section class="banner-content-container">
+  <div class="wallpaper-tile">
+    <div class="wallpaper-cover-up">
+      <div class="banner-img">
+        <h1>From IDEA to PRODUCTION</h1>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="gray-bar"></div>
