Deleted footer component.
Made progress through main and footer responsive designs. Added some grids.

Plan on making the "Back to Top" button able to remove the text by toggling some attribute. Need to strategize best ng6 implementation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,10 @@
     <app-content></app-content>
   </main>
   <footer>
-    <app-social-media *ngIf="width$ <= 760"></app-social-media>
-    <app-copyright></app-copyright>
-    <app-back-to-top></app-back-to-top>
+    <div class="footer-container">
+      <app-social-media *ngIf="width$ <= 760"></app-social-media>
+      <app-copyright></app-copyright>
+      <app-back-to-top></app-back-to-top>
+    </div>
   </footer>
 </div>
