--- a/src/app/back-to-top/back-to-top.component.html
+++ b/src/app/back-to-top/back-to-top.component.html
@@ -1,3 +1,4 @@
-<p>
-  back-to-top works!
-</p>
+<button>
+  <img src="../../assets/SVG/back_to_top_image.svg" alt="back-to-top"><br>
+  Back to Top
+</button>
