--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -71,6 +71,7 @@
             }
             //$banner-break-4: 370px;
             @media (max-width: $banner-break-4) {
+              font-size: 18px;
               //padding: 7px 0;
               //top: 15px;
             }
