--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ $banner-blue: #4169E1;
 $banner-gray: #CCCCCC;
 $navlink-active-gray: #313131;
 $navlink-gray: #606060;
+$footer-background: #1F1F1F;
 
 /* Break Points */
 $header-break-1: 760px;
@@ -14,3 +15,9 @@ $banner-break-1: 750px;
 $banner-break-2: 530px;
 $banner-break-3: 420px;
 $banner-break-4: 370px;
+$content-break-1: 1020px;
+$content-break-2: 500px;
+$content-break-3: 400px;
+$footer-break-1: 900px;
+$footer-break-2: 760px;
+$copyright-break-1: 680px;
