Add a class binding in the appComponent that applies a "compact" class to the backToTopComponent. There is a check for window width on init and resize that updates the class name.
It may be a good idea to create a service that does this to cover multiple components being updated with class names at once. It could be reusable across other components as well.

--- a/src/app/back-to-top/back-to-top.component.html
+++ b/src/app/back-to-top/back-to-top.component.html
@@ -1,4 +1,4 @@
 <button>
   <img src="../../assets/SVG/back_to_top_image.svg" alt="back-to-top"><br>
-  Back to Top
+  <span>Back to Top</span>
 </button>
