--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <div class="footer-container">
       <app-social-media *ngIf="width$ <= 760"></app-social-media>
       <app-copyright></app-copyright>
-      <app-back-to-top></app-back-to-top>
+      <app-back-to-top [class]="backToTopClasses$"></app-back-to-top>
     </div>
   </footer>
 </div>
