The Compact class makes the back-to-top button's image smaller.

--- a/src/app/back-to-top/back-to-top.component.scss
+++ b/src/app/back-to-top/back-to-top.component.scss
@@ -8,7 +8,13 @@
     margin-right: 10px;
   }
 
-  &.compact > button > span{
-    display: none;
+  &.compact > button {
+    img {
+      width: 40px;
+    }
+
+    span {
+      display: none;
+    }
   }
 }
