Implemented the router. It has paths for '' and 'home'. Adjusted SCSS to account for slightly different nesting stucture.
Made the banner component accept 3 input values: text, imageFilename, & imageQuality. This allows it to be flexible based on the parent component's requirements.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,7 @@
     <app-social-media *ngIf="width$ > 760"></app-social-media>
   </header>
   <main>
-    <app-banner></app-banner>
-    <app-content></app-content>
+    <router-outlet></router-outlet>
   </main>
   <footer>
     <div class="footer-container">
