--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,8 +12,6 @@ div#app-container {
   height: 100vh;
   display: grid;
   grid-template-rows: 140px auto 100px;
-  //grid-template-areas: "header" "banner" "content" "footer";
-  //background-color: maroon;
 
   header {
     position: relative;
@@ -32,7 +30,7 @@ div#app-container {
     }
   }
 
-  main {
+  main > * {
     display: grid;
     grid-template-rows: auto auto;
   }
