--- a/src/app/back-to-top/back-to-top.component.html
+++ b/src/app/back-to-top/back-to-top.component.html
@@ -1,4 +1,4 @@
-<button>
+<button (click)="scrollToTop()">
   <img src="../../assets/SVG/back_to_top_image.svg" alt="back-to-top"><br>
   <span>Back to Top</span>
 </button>
