--- a/src/app/home-banner/home-banner.component.html
+++ b/src/app/home-banner/home-banner.component.html
@@ -2,8 +2,8 @@
 <section class="banner-content-container">
   <div class="wallpaper-tile">
     <div class="wallpaper-cover-up">
-      <div class="banner-img" [style.background-image]="backgroundStyle$">
-        <h1>{{text}}</h1>
+      <div class="banner-img">
+        <h1>From IDEA to PRODUCTION</h1>
       </div>
     </div>
   </div>
