--- a/src/app/home-banner/home-banner.component.scss
+++ b/src/app/home-banner/home-banner.component.scss
@@ -32,7 +32,7 @@
         }
 
         div.banner-img {
-          //background: url("../../../src/assets/3x/from_idea_to_production_bannerxxhdpi.png") center no-repeat;
+          background: url("../../../src/assets/3x/from_idea_to_production_bannerxxhdpi.png") center no-repeat;
           height: 100%;
           max-width: 530px;
           background-size: contain;
