Set up the content for the 4 links in the navigation.

--- a/src/app/home-content/home-content.component.html
+++ b/src/app/home-content/home-content.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="content">
   <h1>Ideas, Expectations, and the Development Cycle</h1>
   <p>Ideas are powerful when implemented in the right way. But accomplishing this requires an orchestra of moving parts
     to come together efficiently, so that the idea hits the necessary benchmarks of time and quality.</p>
