--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,9 +1,9 @@
 <nav>
-  <a href="#" class="active">Home</a>
+  <a routerLink="/home" routerLinkActive="active">Home</a>
   <p>/</p>
-  <a href="#">Portfolio</a>
+  <a routerLink="/portfolio" routerLinkActive="active">Portfolio</a>
   <p>/</p>
-  <a href="#">Contact</a>
+  <a routerLink="/contact" routerLinkActive="active">Contact</a>
   <p>/</p>
-  <a href="#">About</a>
+  <a routerLink="/about" routerLinkActive="active">About</a>
 </nav>
