--- a/src/app/es-borders/es-borders.component.html
+++ b/src/app/es-borders/es-borders.component.html
@@ -1,3 +1,4 @@
-<p>
-  es-borders works!
-</p>
+<app-banner
+  [imageFilename]="'86borders_bannerxxhdpi.png'"
+  [imageQuality]="'3x'"></app-banner>
+<app-es-borders-content></app-es-borders-content>
