--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,5 +1,1 @@
-<app-banner
-  [text]="'Check my work.'"
-  [imageFilename]="'tools_and_companies_bannerxxhdpi.png'"
-  [imageQuality]="'3x'"></app-banner>
-<app-portfolio-content></app-portfolio-content>
+<router-outlet></router-outlet>
