--- a/src/app/special-projects/special-projects.component.html
+++ b/src/app/special-projects/special-projects.component.html
@@ -1,3 +1,4 @@
-<p>
-  special-projects works!
-</p>
+<app-banner
+  [imageFilename]="'special_projects_bannerxxhdpi.png'"
+  [imageQuality]="'3x'"></app-banner>
+<app-special-projects-content></app-special-projects-content>
