--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -3,7 +3,7 @@
   <div class="wallpaper-tile">
     <div class="wallpaper-cover-up">
       <div class="banner-img" [style.background-image]="backgroundStyle$">
-        <h1>{{text}}</h1>
+        <h1 *ngIf="text">{{text}}</h1>
       </div>
     </div>
   </div>
