--- a/src/app/sesra/sesra.component.html
+++ b/src/app/sesra/sesra.component.html
@@ -1,3 +1,4 @@
-<p>
-  sesra works!
-</p>
+<app-banner
+  [imageFilename]="'sesra_bannerxxhdpi.png'"
+  [imageQuality]="'3x'"></app-banner>
+<app-sesra-content></app-sesra-content>
