--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,23 +28,29 @@ body {
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
-
   section.content {
     grid-area: content;
     max-width: 720px;
-    margin:auto;
+    margin: auto;
     padding: 30px;
 
     img.logo {
       margin: 30px 0 15px;
+      max-width: 80vw;
     }
 
-    div.quick-link-icons{
+    div.quick-link-icons {
       text-align: center;
 
       img {
-        margin: 0 30px;
+        margin: 0 15px;
+
+        @media (max-width: 420px) {
+          width: 80px;
+          margin: 3px;
+        }
       }
+
     }
 
     a {
