Expirmented with solutions to the problem where Safari mobile will not let the user tap the bottom 44px, without revealing the menu bar before taking any other actions.

--- a/src/app/portfolio-overview-content/portfolio-overview-content.component.html
+++ b/src/app/portfolio-overview-content/portfolio-overview-content.component.html
@@ -72,13 +72,9 @@
       expected by others in a professional.</p>
 
     <p>To this end, I decided to make this website as an example of the process I describe in the article that I wrote
-      for the
-      <a
-        routerLink="/home">home
-      </a>
-      page, going from idea to production. And true to form, going from the original idea of making a website portfolio
-      of past projects to the final product, has taken more time than I had hoped and ended up a little different than I
-      expected.
+      for the <a routerLink="/home">home</a> page, going from idea to production. And true to form, going from the
+      original idea of making a website portfolio of past projects to the final product, has taken more time than I had
+      hoped and ended up a little different than I expected.
     </p>
 
     <p>However, the creation of this website nonetheless exemplifies my knowledge of the process and understanding of
