--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,8 +23,9 @@ $footer-break-2: 760px;
 $copyright-break-1: 680px;
 
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
