--- a/src/app/back-to-top/back-to-top.component.scss
+++ b/src/app/back-to-top/back-to-top.component.scss
@@ -5,7 +5,7 @@
   button {
     background-color: transparent;
     border: none;
-    margin-right: 10px;
+    margin: 10px 10px 0 0;
   }
 
   &.compact > button {
