--- a/src/app/portfolio/portfolio-overview/portfolio-overview-content/portfolio-overview-content.component.html
+++ b/src/app/portfolio/portfolio-overview/portfolio-overview-content/portfolio-overview-content.component.html
@@ -1,20 +1,17 @@
 <section class="content">
   <div class="quick-link-icons">
-    <a routerLink="/portfolio/86borders"><img src="../../assets/SVG/86borders_icon.svg" alt="86borders icon"></a>
-    <a routerLink="/portfolio/sesra"><img
-      src="../../assets/SVG/sesra_icon.svg" alt="sesra icon"></a>
-    <a routerLink="/portfolio/special-projects"><img
-      src="../../assets/SVG/special_projects_icon.svg" alt="special projects icon"></a>
+    <a routerLink="/portfolio/86borders"><img src="../../../../assets/SVG/86borders_icon.svg" alt="86borders icon"></a> <a
+    routerLink="/portfolio/sesra"><img
+    src="../../../../assets/SVG/sesra_icon.svg" alt="sesra icon"></a> <a routerLink="/portfolio/special-projects"><img
+    src="../../../../assets/SVG/special_projects_icon.svg" alt="special projects icon"></a>
   </div>
   <h1>Portfolio</h1>
   <p>In the past several years I’ve worked on several projects. Below is a brief overview of each. If you want to jump
     straight to a project, click on its image or icon.</p>
 
   <section>
-    <a routerLink="/portfolio/86borders"><img class="logo" src="../../assets/SVG/86borders_logo.svg"
-                                              alt="86borders logo"></a>
-    <br>
-    <a href="https://86borders.com/">86Borders.com</a>
+    <a routerLink="/portfolio/86borders"><img class="logo" src="../../../../assets/SVG/86borders_logo.svg"
+                                              alt="86borders logo"></a> <br> <a href="https://86borders.com/">86Borders.com</a>
 
     <p>I’ve worked at 86Borders for three and a half years and gained the title Director of User Experience. While
       there, I’ve gained extensive experience as a:</p>
@@ -45,8 +42,7 @@
       healthcare which 86Borders is heavily involved, but of which lack the expertise or the forum to speak here.</p>
   </section>
   <section>
-    <a routerLink="/portfolio/sesra"><img class="logo" src="../../assets/SVG/sesra_logo.svg" alt="sesra logo"></a>
-    <br>
+    <a routerLink="/portfolio/sesra"><img class="logo" src="../../../../assets/SVG/sesra_logo.svg" alt="sesra logo"></a> <br>
     <a href="http://sesra.ussquash.com/">sesra.ussquash.com</a>
 
     <p>The Southeastern Squash Racquets Association (SESRA) was founded in the 1980’s. It functions as a non-profit
@@ -60,7 +56,7 @@
 
   </section>
   <section>
-    <a routerLink="/portfolio/special-projects"><img class="logo" src="../../assets/SVG/special_projects_logo.svg"
+    <a routerLink="/portfolio/special-projects"><img class="logo" src="../../../../assets/SVG/special_projects_logo.svg"
                                                      alt="special projects logo"></a>
 
     <p>Aside from work that I’ve done for my job, or as any part of an organization, I’ve felt that I should provide a
