--- a/src/app/social-media/social-media.component.scss
+++ b/src/app/social-media/social-media.component.scss
@@ -3,7 +3,7 @@
 :host {
   text-align: right;
   grid-area: social-media;
-  align-self: start;
+  //align-self: start;
 
 
   //$footer-break-2: 760px;
@@ -11,13 +11,14 @@
     text-align: left;
   }
 
-  @media (max-width: 375px) {
+  //$footer-break-3: 375px;
+  /*@media (max-width: $footer-break-3) {
     align-self: center;
-  }
+  }*/
 }
 
 a {
-  margin-right: 30px;
+  margin: 10px 30px 10px 10px;
 
   &:last-child {
     margin-right: 0;
