--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,12 +20,13 @@ $content-break-2: 500px;
 $content-break-3: 400px;
 $footer-break-1: 900px;
 $footer-break-2: 760px;
+$footer-break-3: 375px;
 $copyright-break-1: 680px;
 
 body {
-  height: 100%;
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
+  //height: 100%;
+  //overflow: scroll;
+  //-webkit-overflow-scrolling: touch;
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
