Removed deprecated inputs in the banner-component.

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,4 @@
 <app-banner
   [text]="'Let\'s talk ideas.'"
-  [parent]="'contact'"
-  [imageQuality]="'2x'"></app-banner>
+  [parent]="'contact'"></app-banner>
 <app-contact-content></app-contact-content>
