Added some images to the 86EnRoute portion of the portfolio.

--- a/src/app/portfolio/portfolio-overview/portfolio-overview-content/portfolio-overview-content.component.html
+++ b/src/app/portfolio/portfolio-overview/portfolio-overview-content/portfolio-overview-content.component.html
@@ -1,12 +1,11 @@
 <section class="content">
   <section>
-    <h1 ><span>86Borders</span><br>
-      Director of User Experience</h1>
+    <h1><span>86Borders</span><br> Director of User Experience</h1>
     <a href="https://86borders.com/"><img class="logo" src="../../../../assets/SVG/86borders_logo.svg"
-                                              alt="86borders logo"></a> <br> <a href="https://86borders.com/">
+                                          alt="86borders logo"></a> <br> <a href="https://86borders.com/">
     86Borders.com</a>
-    <p>I’ve worked at 86Borders for nearly four years and gained the title Director of User Experience. While
-      there, I’ve gained extensive experience as a:</p>
+    <p>I’ve worked at 86Borders for nearly four years and gained the title Director of User Experience. While there,
+      I’ve gained extensive experience as a:</p>
     <ul>
       <li>Business Analyst</li>
       <li>Product Manager</li>
@@ -47,7 +46,7 @@
     <p>Organizations can set up groups with logos, thumbnails, banners, and about info to identify their brand. </p>
     <div class="block-image"><img src="../../../../assets/1x/esb_edit_group_abc_delivery-80.jpg" alt=""></div>
     <p>Administrators can explicitly add members to a private group, or they can make the group public, so members can
-      join find the group and join voluntarily. </p>
+      find the group and join voluntarily. </p>
     <div class="block-image"><img src="../../../../assets/1x/esb_onboarding_members_to_abc-80.jpg" alt=""></div>
     <p>Groups to which the user belong appear in the Group navigation bar on the left. </p>
     <div class="block-image"><img src="../../../../assets/1x/esb_group_navigation-80.jpg" alt=""></div>
@@ -71,14 +70,21 @@
     <p>The keystone piece of 86EnRoute is the worker app. It provides the day’s orders to the worker and transmits their
       location. Their location can be used to trigger geofence-based status updates and provide real-time location
       information to managers and customers.</p>
+    <div class="block-image"><img src="../../../../assets/1x/eser_worker_app_various_views-80.jpg" alt=""></div>
     <p>Branding is embedded in the app in the form of a thumbnail in the upper left corner of the header. The thumbnail
       used here is set for the particular group within the 86Borders platform.</p>
     <p>The Order List view displays a list of the worker’s orders. Right from the list the worker can call or get
       directions to the order destination. </p>
+    <div class="block-image"><img class="mobile-app" src="../../../../assets/1x/eser_worker_app_order_list-80.jpg"
+                                  alt=""></div>
     <p>Tapping on an Order’s details will show more information about the order and provide access to functionalities
       like, taking a photo, getting an electronic signature, or advancing the status manually. </p>
+    <div class="block-image"><img class="mobile-app" src="../../../../assets/1x/eser_worker_app_order_details-80.jpg"
+                                  alt=""></div>
     <p>Workers can see the locations of their orders on a map, allowing them to have an overview of the day’s
       route. </p>
+    <div class="block-image"><img class="mobile-app" src="../../../../assets/1x/eser_worker_app_route_map-80.jpg"
+                                  alt=""></div>
     <h3>The Operations Dashboard</h3>
     <p>Administrators of the 86EnRoute solution have access to the Operations Dashboard. It consists of a map displaying
       points of interest, including worker locations, order pickup locations, and order dropoff locations. </p>
@@ -123,11 +129,9 @@
   </section>
   <hr>
   <section>
-    <h1><span>SESRA</span><br>
-      Director of Communications</h1>
+    <h1><span>SESRA</span><br> Director of Communications</h1>
     <a href="http://sesra.ussquash.com/"><img class="logo" src="../../../../assets/SVG/sesra_logo.svg" alt="sesra logo"></a>
-    <br>
-    <a href="http://sesra.ussquash.com/">sesra.ussquash.com</a>
+    <br> <a href="http://sesra.ussquash.com/">sesra.ussquash.com</a>
     <p>The Southeastern Squash Racquets Association (SESRA) was founded in the 1980’s. It functions as a non-profit
       organization to aid the growth of the squash community in the southeast and promote development of junior squash
       players.</p>
@@ -138,21 +142,29 @@
   </section>
   <section>
     <h2>WordPress Website</h2>
-    <p><a href="http://sesra.ussquash.com/">sesra.ussquash.com</a> is a WordPress website hosted as a subdomain of ussquash.com. The technology representative from US Squash created an instance for us to use, based on their theme.</p>
-    <p>The website provides a place for members to go to find out recent activities within the SESRA community. These articles appear on the home page. </p>
+    <p><a href="http://sesra.ussquash.com/">sesra.ussquash.com</a> is a WordPress website hosted as a subdomain of
+      ussquash.com. The technology representative from US Squash created an instance for us to use, based on their
+      theme.</p>
+    <p>The website provides a place for members to go to find out recent activities within the SESRA community. These
+      articles appear on the home page. </p>
     <p>A calendar keeps track of upcoming events, including a compact version that sits on the home page. </p>
     <p>Visitors can learn about some of the well-known SESRA club pros in the “Know Your Pro” section. </p>
     <p>The SESRA twitter feed is embedded on the home page. </p>
   </section>
   <section>
     <h2>Constant Contact</h2>
-    <p>Perhaps the most effective tool used by SESRA for its outreach goals is the email marketing tool, Constant Contact. It allows us to share important news with targeted SESRA members in a secure manner, as well as reach members who might not otherwise visit the website.</p>
+    <p>Perhaps the most effective tool used by SESRA for its outreach goals is the email marketing tool, Constant
+      Contact. It allows us to share important news with targeted SESRA members in a secure manner, as well as reach
+      members who might not otherwise visit the website.</p>
     <p>Designing an email campaign and branding it with our logo and colors is simple.</p>
     <p>We have used Constant Contact to assemble email lists that go to specific groups of people.</p>
     <p>When email campaigns go out, we can see what the open rate was.</p>
   </section>
   <section>
     <h2>Facebook, Twitter, Instagram</h2>
-    <p>SESRA has official social media accounts: <a href="https://www.facebook.com/groups/123206984393368">Facebook</a>, <a href="https://twitter.com/SesraMedia">Twitter</a>, & <a href="https://www.instagram.com/sesramedia/">Instagram</a>. Their accounts are accessible by trusted board members and contributors, so they can post things that are happening as they happen.</p>
+    <p>SESRA has official social media accounts: <a href="https://www.facebook.com/groups/123206984393368">Facebook</a>,
+      <a href="https://twitter.com/SesraMedia">Twitter</a>, & <a
+        href="https://www.instagram.com/sesramedia/">Instagram</a>. Their accounts are accessible by trusted board
+      members and contributors, so they can post things that are happening as they happen.</p>
   </section>
 </section>
