Removed some unused Portfolio components and simplified the routing related to them.

--- a/src/app/about/about-content/about-content.component.html
+++ b/src/app/about/about-content/about-content.component.html
@@ -1,4 +1,4 @@
-<section class="content">
+<section class="content about">
   <h1>About</h1>
   <p>My name is Clark Brading and I’m a technologist. I went to Georgia Tech, graduating as a Biomedical Engineer, and
     joined a startup technology company called 86Borders shortly thereafter. While at 86Borders, I gained the title of
