--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<app-banner
+  [text]="'Check my work.'"
+  [parent]="'portfolio-overview'"></app-banner>
+<app-portfolio-content></app-portfolio-content>
