Updated the LinkedIn url. Added icons to the About page.

--- a/src/app/about/about-content/about-content.component.html
+++ b/src/app/about/about-content/about-content.component.html
@@ -1,26 +1,30 @@
 <section class="content about">
   <h1>About</h1>
+
+  <img class="right" src="../../../assets/1x/ga_tech_icon-80.jpg" alt="Ga Tech icon">
+
   <p>My name is Clark Brading and I’m a technologist. I went to Georgia Tech, graduating as a Biomedical Engineer, and
     joined a startup technology company called 86Borders shortly thereafter. While at 86Borders, I gained the title of
     Director of User Experience and have been the product manager for our main platform (a PAAS solution), our marketing
     pages, and our logistics solution 86EnRoute.</p>
 
-  <p>During my time at 86Borders, I’ve advanced our products by taking requirements from our clients and stakeholders
-    and brought them to life through design and work with web and mobile developers (sometimes doing the development
-    myself). Seeing these items through to completion also means arming our sales team with screenshots, prototypes, and
-    demo videos.</p>
+  <img class="left" src="../../../assets/1x/86borders_icon.png" alt="86Borders icon">
+
+  <p>During my time at 86Borders, I’ve advanced our products by getting the requirements from our clients and
+    stakeholders and bringing them to life through design and development. Seeing these items through to completion also
+    means arming our sales team with screenshots, prototypes, and demo videos.</p>
+
+  <img src="../../../assets/1x/sesra_icon.png" alt="sesra icon" class="right">
 
   <p>Apart from my regular job, I’ve also been a board member of the South Eastern Squash Racquets Association (SESRA)
     with the role of Director of Communications for the past year. In this role, I’ve been in charge of overseeing our
     WordPress website, our Constant Contact email outreach newsletters, and our social media profiles.</p>
 
   <p>I’ve made this website to provide a bit of insight into my world of technology. It functions as a comprehensive
-    example of my range of skills, as I design, develop, and support it myself. To see how I made it, check out my GitHub
-    <a href="https://github.com/scbrading/portfolio">here</a>.
+    example of my range of skills, as I design, develop, and support it myself. To see how I made it, check out my
+    GitHub <a href="https://github.com/scbrading/portfolio" target="_blank">here</a>.
   </p>
 
-  <p>Please explore my
-    <a routerLink="/portfolio">portfolio</a>
-    to learn more.
+  <p>Please explore my <a routerLink="/portfolio">portfolio</a> to learn more.
   </p>
 </section>
