--- a/src/app/contact/contact-content/contact-content.component.html
+++ b/src/app/contact/contact-content/contact-content.component.html
@@ -3,5 +3,5 @@
   <p>Please contact me through LinkedIn.</p>
 
   <p>You can find my profile
-    <a href="https://www.linkedin.com/in/clark-brading-28469891/">here</a>.</p>
+    <a href="https://www.linkedin.com/in/clarkbrading/">here</a>.</p>
 </section>
