--- a/src/app/social-media/social-media.component.html
+++ b/src/app/social-media/social-media.component.html
@@ -1,5 +1,5 @@
-<a href="https://github.com/scbrading"><img id="git" src="../../assets/SVG/github%20icon%20gray.svg"
+<a href="https://github.com/scbrading" target="_blank"><img id="git" src="../../assets/SVG/github%20icon%20gray.svg"
                                             alt="link to github account"></a>
-<a href="https://www.linkedin.com/in/clark-brading-28469891/"><img id="linkedin"
+<a href="https://www.linkedin.com/in/clarkbrading/" target="_blank"><img id="linkedin"
                                                                    src="../../assets/SVG/linkedin%20icon%20gray.svg"
                                                                    alt="link to linkedin account"></a>
