--- a/src/app/contact/contact-content/contact-content.component.html
+++ b/src/app/contact/contact-content/contact-content.component.html
@@ -1,7 +1,6 @@
 <section class="content">
   <h1>Contact</h1>
-  <p>Please contact me through LinkedIn.</p>
+  <p>Please contact me at <a href="mailto:scbrading@gmail.com">scbrading@gmail.com</a></p>
 
-  <p>You can find my profile
-    <a href="https://www.linkedin.com/in/clarkbrading/">here</a>.</p>
+
 </section>
