Changed the text of 86Borders portfolio overview. Changed the id card to say Director UX.

--- a/src/app/portfolio/portfolio-content/portfolio-content.component.html
+++ b/src/app/portfolio/portfolio-content/portfolio-content.component.html
@@ -5,7 +5,7 @@
                                           alt="86borders logo"></a> <br> <a href="https://86borders.com/">
     86Borders.com</a>
     <p>I’ve worked at 86Borders for nearly four years and gained the title Director of User Experience. While there,
-      I’ve gained extensive experience as a:</p>
+      I’ve had extensive experience as a:</p>
     <ul>
       <li>Business Analyst</li>
       <li>Product Manager</li>
