--- a/src/app/id-card/id-card.component.html
+++ b/src/app/id-card/id-card.component.html
@@ -1,3 +1,3 @@
   <img src="../../assets/2x/profile_pic_thumbnail-80.jpg" alt="Clark Brading - profile picture.">
   <h1>Clark Brading</h1>
-  <p>Director, UX</p>
+  <p>UX Director</p>
